"""Initial tables

Revision ID: a87b20916056
Revises: 
Create Date: 2025-05-12 22:57:55.131144

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'a87b20916056'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('product',
    sa.Column('id', sa.String(), autoincrement=False, nullable=False),
    sa.Column('name', sa.String(), nullable=False),
    sa.Column('category', sa.String(), nullable=False),
    sa.Column('type', sa.String(), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('customizable_product',
    sa.Column('product_id', sa.String(), nullable=False),
    sa.ForeignKeyConstraint(['product_id'], ['product.id'], ),
    sa.PrimaryKeyConstraint('product_id')
    )
    op.create_table('service_product',
    sa.Column('product_id', sa.String(), nullable=False),
    sa.ForeignKeyConstraint(['product_id'], ['product.id'], ),
    sa.PrimaryKeyConstraint('product_id')
    )
    op.create_table('stockable_product',
    sa.Column('product_id', sa.String(), nullable=False),
    sa.Column('stock_units', sa.Integer(), nullable=False),
    sa.Column('price', sa.Float(), nullable=False),
    sa.ForeignKeyConstraint(['product_id'], ['product.id'], ),
    sa.PrimaryKeyConstraint('product_id')
    )
    op.create_table('customizable_product_configuration',
    sa.Column('id', sa.String(), autoincrement=False, nullable=False),
    sa.Column('product_id', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['product_id'], ['customizable_product.product_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('price_rule',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('recipient_product_id', sa.String(), nullable=False),
    sa.Column('price', sa.Float(), nullable=False),
    sa.Column('service_id', sa.String(), nullable=False),
    sa.ForeignKeyConstraint(['recipient_product_id'], ['product.id'], ),
    sa.ForeignKeyConstraint(['service_id'], ['service_product.product_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('product_option',
    sa.Column('id', sa.String(), autoincrement=False, nullable=False),
    sa.Column('name', sa.String(), nullable=False),
    sa.Column('category', sa.String(), nullable=False),
    sa.Column('required', sa.Boolean(), nullable=False),
    sa.Column('configuration_id', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['configuration_id'], ['customizable_product_configuration.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('product_option_value',
    sa.Column('id', sa.String(), autoincrement=False, nullable=False),
    sa.Column('option_id', sa.String(), nullable=False),
    sa.Column('product_id', sa.String(), nullable=False),
    sa.Column('customizable_product_id', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['customizable_product_id'], ['customizable_product.product_id'], ),
    sa.ForeignKeyConstraint(['option_id'], ['product_option.id'], ),
    sa.ForeignKeyConstraint(['product_id'], ['product.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('product_option_value')
    op.drop_table('product_option')
    op.drop_table('price_rule')
    op.drop_table('customizable_product_configuration')
    op.drop_table('stockable_product')
    op.drop_table('service_product')
    op.drop_table('customizable_product')
    op.drop_table('product')
    # ### end Alembic commands ###
